--- a/html/index.html
+++ b/html/index.html
@@ -75,9 +75,9 @@ $(function() {
 <div class="textblock"><h1><a class="anchor" id="intro_sec"></a>
 Introduction</h1>
 <p>This project was made in the context of the Algorithms and Data Structures class.</p>
-<p>The aim of this project is is precisely to develop a flight management system for the air travel network of the airlines around the world that provides effective assistance to users who wish to explore and plan travel.</p>
+<p>The aim of this project is precisely to develop a flight management system for the air travel network of the airlines around the world that provides effective assistance to users who wish to explore and plan travel.</p>
 <p>The system must include various functionalities such as searching information about an airport, an airline, a city, a country or general information. The system also allows the user to search the best flight option between two airports, cities or coordinates with or without using a filter.</p>
-<p>This project was made by: Filipa Geraldes, Filipa Fidalgo and Leonor Couto. </p>
+<p>This project was made by: Filipa Geraldes (up202208030), Filipa Fidalgo (up202208039) and Leonor Couto (up202205796). </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 <!-- start footer part -->
